@@ -2,77 +2,115 @@ package group6.cinema_project.service.Admin.impl;
 
 import group6.cinema_project.dto.BranchDto;
 import group6.cinema_project.entity.Branch;
+
 import group6.cinema_project.repository.Admin.AdminBranchRepository;
+import group6.cinema_project.repository.Admin.AdminCinemaChainRepository;
 import group6.cinema_project.service.Admin.IAdminBranchService;
 import lombok.RequiredArgsConstructor;
-import org.modelmapper.ModelMapper;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+import org.springframework.data.domain.PageRequest;
+import org.modelmapper.ModelMapper;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class AdminBranchServiceImpl implements IAdminBranchService {
-    private final AdminBranchRepository branchRepository;
-    private final ModelMapper modelMapper;
+
+
+    @Autowired
+    private AdminBranchRepository branchRepository;
+    @Autowired
+    private AdminCinemaChainRepository cinemaChainRepository;
+    @Autowired
+    private ModelMapper modelMapper;
 
     @Override
-    @Transactional(readOnly = true)
-    public Optional<BranchDto> getBranchById(Integer id) {
-        return branchRepository.findById(id)
-                .map(this::convertToBasicDto);
+    public List<BranchDto> findAll() {
+        return branchRepository.findAll().stream()
+                .map(branch -> modelMapper.map(branch, BranchDto.class))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public BranchDto saveOrUpdateBranch(BranchDto branchDto) {
-        Branch branch = modelMapper.map(branchDto, Branch.class);
-        Branch savedBranch = branchRepository.save(branch);
-        return modelMapper.map(savedBranch, BranchDto.class);
+    public BranchDto findById(int id) {
+        Optional<Branch> branch = branchRepository.findById(id);
+        return branch.map(b -> modelMapper.map(b, BranchDto.class)).orElse(null);
     }
 
     @Override
-    public void deleteBranch(Integer id) {
-        if (!branchRepository.existsById(id)) {
-            throw new IllegalArgumentException("Cannot delete. Branch not found with ID: " + id);
-        }
+    public BranchDto save(BranchDto branchDto) {
+        Branch branch = new Branch();
+        branch.setId(branchDto.getId());
+        branch.setName(branchDto.getName());
+        branch.setDescription(branchDto.getDescription());
+        branch.setAddress(branchDto.getAddress());
+
+        // Lấy entity từ repository
+        branch.setCinemaChain(cinemaChainRepository.findById(branchDto.getCinemaChainId()).orElse(null));
+
+        Branch saved = branchRepository.save(branch);
+        return modelMapper.map(saved, BranchDto.class);
+    }
+
+    @Override
+    public void deleteById(int id) {
         branchRepository.deleteById(id);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<BranchDto> getAllBranches() {
-        return branchRepository.findAll().stream()
-                .map(this::convertToBasicDto)
+    public List<BranchDto> findByCinemaChainId(int cinemaChainId) {
+        return branchRepository.findByCinemaChainId(cinemaChainId).stream()
+                .map(branch -> modelMapper.map(branch, BranchDto.class))
                 .collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<Branch> getAllBranchEntities() {
-        return branchRepository.findAll();
+    public Page<BranchDto> getBranchesPage(int page, int size) {
+        Page<Branch> branchPage = branchRepository.findAll(PageRequest.of(page, size));
+        List<BranchDto> branchDtos = branchPage.getContent().stream().map(branch -> modelMapper.map(branch, BranchDto.class)).collect(Collectors.toList());
+        return new PageImpl<>(branchDtos, branchPage.getPageable(), branchPage.getTotalElements());
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public List<BranchDto> getFilteredBranches(String searchTerm) {
-        if (searchTerm == null || searchTerm.trim().isEmpty()) {
-            return getAllBranches();
+    public Page<Branch> getBranchesPage(int page, int size, String name, String address, String cinemaChain) {
+        boolean hasSearch = (name != null && !name.trim().isEmpty()) || (address != null && !address.trim().isEmpty()) || (cinemaChain != null && !cinemaChain.trim().isEmpty());
+        if (hasSearch) {
+            return branchRepository.searchBranches(
+                    (name == null || name.isBlank()) ? null : name,
+                    (address == null || address.isBlank()) ? null : address,
+                    (cinemaChain == null || cinemaChain.isBlank()) ? null : cinemaChain,
+                    PageRequest.of(page, size)
+            );
+        } else {
+            return branchRepository.findAll(PageRequest.of(page, size));
         }
-        return branchRepository.findByNameContainingIgnoreCase(searchTerm.trim()).stream()
-                .map(this::convertToBasicDto)
-                .collect(Collectors.toList());
+    }
+        @Override
+        public boolean isNameDuplicate (String name, Integer id){
+            List<Branch> branches = branchRepository.findByName(name);
+            if (id == null) {
+                return !branches.isEmpty();
+            } else {
+                return branches.stream().anyMatch(b -> b.getId() != id);
+            }
+        }
+        @Override
+        public List<BranchDto> getAllBranches () {
+            return branchRepository.findAll().stream()
+                    .map(branch -> modelMapper.map(branch, BranchDto.class))
+                    .collect(Collectors.toList());
+        }
+
+
     }
 
-    private BranchDto convertToBasicDto(Branch branch) {
-        BranchDto dto = new BranchDto();
-        dto.setId(branch.getId());
-        dto.setName(branch.getName());
-        dto.setDescription(branch.getDescription());
-        dto.setAddress(branch.getAddress());
-        return dto;
-    }
-}
